"one graph card is added in analytics page using char js"

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tiptap/react": "^2.2.4",
     "@tiptap/starter-kit": "^2.2.4",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "draft-js": "^0.11.7",
